--- a/SYMFONY/templates/stat/index.html.twig
+++ b/SYMFONY/templates/stat/index.html.twig
@@ -2,19 +2,52 @@
 
 {% block title %}Hello StatController!{% endblock %}
 
-{% block body %}
-<H1>STATISTIQUE </H1>
-<div class="form-stat">
-    <label for="chartType" class="form-label">Choisir le type de graphique :</label>
-    <select name="chartType" id="chartType" class="form-select">
-        <option value={{ path("app_login") }}>Liste du Personnel</option>
-        <option value="bar">Chiffre d'Affaires</option>
-        <option value="radar">Statistique</option>
-    </select>
-    <button type="submit" class="form-button">Afficher</button>
-</div>
-<div class="example-wrapper">
-{{ render_chart(chart) }}
-</div>
+{% block head %}
 
+{% endblock %}
+
+{% block body %}
+   
+    <div class="example-wrapper">
+        <div class="chart1">
+            {{ render_chart(chart3) }}
+            <div class="operation-table">
+                <h2>Nombre d'opérations par type</h2>
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Type</th>
+                            <th>Nombre d'opérations</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Grosse</td>
+                            <td>{{ countGrosse }}</td>
+                        </tr>
+                        <tr>
+                            <td>Moyenne</td>
+                            <td>{{ countMoyenne }}</td>
+                        </tr>
+                        <tr>
+                            <td>Petite</td>
+                            <td>{{ countPetite }}</td>
+                        </tr>
+                        <tr>
+                            <td>Custom</td>
+                            <td>{{ countCustom }}</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+        <div class="chart2">
+          
+            {{ render_chart(chart2) }}
+        </div>
+        <div class="chart3">
+            
+            {{ render_chart(chart1) }}
+        </div>
+    </div>
 {% endblock %}
