--- a/SYMFONY/assets/styles/app.css
+++ b/SYMFONY/assets/styles/app.css
@@ -688,9 +688,10 @@ button:hover {
   font-size: 20px; /* Ajuster la taille du texte selon vos préférences */
 }
 .example-wrapper{
- width: 50%;
- margin-left: 25%;
- padding-top: 5%;
+
+width: 100%;
+align-items:start;
+
   
 }
 .form-stat {
@@ -698,7 +699,25 @@ button:hover {
   flex-direction: column;
   align-items: flex-start;
   
+  
 }
 .form-label, .form-select, .form-button {
   margin-bottom: 20px;
+}
+.chart1{
+  width: 50%;
+  margin-top: 5%;
+  display: flex;
+  justify-content: space-evenly;
+  
+}
+.chart2{
+  width: 50%;
+  margin-top: 5%;
+  
+}
+.chart3{
+  width: 50%;
+  margin-top: 5%;
+  
 }
