--- a/SYMFONY/templates/form/custom_theme.html.twig
+++ b/SYMFONY/templates/form/custom_theme.html.twig
@@ -20,7 +20,7 @@
 {% endblock %}
 
 {% block textarea_widget %}
-	<textarea {{ block('widget_attributes') }}></textarea>
+	<textarea {{ block('widget_attributes') }}>{{value}}</textarea>
 
 {% endblock %}
 {% block choice_widget %}
