--- a/SYMFONY/assets/styles/app.css
+++ b/SYMFONY/assets/styles/app.css
@@ -1,5 +1,3 @@
-
-
 @import url("https ://fonts.googleapis.com/css2 ?family=Lato :wght@400 ; 700; 900&family=Roboto :ital,wght@0,100 ; 0,300; 0,400; 0,500; 0,700; 0,900; 1,100; 1,300; 1,400; 1,500; 1,700; 1 900&display=swap");
 
 p,
@@ -18,6 +16,7 @@ h6 {
 .container {
   padding-inline: 10%;
   background-color: white;
+  padding-bottom: 20px;
 }
 .divIntro {
   display: flex;
@@ -243,13 +242,10 @@ label {
   background-color: #0056b3;
 }
 
-
 body {
-    margin: 0;
-    padding: 0;
-    
-}  
-
+  margin: 0;
+  padding: 0;
+}
 
 .btnInputFile {
   align-self: center;
@@ -693,30 +689,30 @@ tr {
 }
 
 /* Ajout Opération */
-.priority{
+.priority {
   font-family: bold italic;
 }
-.hight{
-  color: #ED3939;
+.hight {
+  color: #ed3939;
 }
-.medium{
-  color: #FA8530;
+.medium {
+  color: #fa8530;
 }
-.normal{
-  color: #A39999;
+.normal {
+  color: #a39999;
 }
-.imgOperationList{
+.imgOperationList {
   height: 200px;
   width: 300px;
   border-radius: 20px;
 }
-.imgOperationDetails{
+.imgOperationDetails {
   border-radius: 10px;
   height: 400px;
-  width:600px ;
+  width: 600px;
   margin: 20px;
 }
-.champAdresse{
+.champAdresse {
   padding: 20px;
   font-size: 20px;
 }
@@ -728,7 +724,6 @@ tr {
   align-items: center;
   background-color: white;
   padding: 5px 10px; /* Réduire le padding pour diminuer la hauteur */
-
 }
 
 /* Élément de la barre de navigation */
@@ -757,7 +752,7 @@ tr {
 
 /* Texte des liens de navigation */
 .nav-link p {
-font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
 
   color: #85ba22;
   border-radius: 30px;
@@ -784,7 +779,6 @@ font-family: 'Roboto', sans-serif;
   right: 0; /* Position à droite */
   margin: 10px; /* Réduire les marges pour diminuer la hauteur */
 }
-
 
 .navE-links li a:hover,
 .navL-links li a:hover {
@@ -895,8 +889,6 @@ td.statutL {
   width: 283px;
 }
 
-
-
 /* Texte pour 'Espace Salarié' ou 'Déconnexion' */
 
 .nav-item.espace-salarie p {
@@ -917,40 +909,32 @@ td.statutL {
   }
 }
 
-
-
 /* GRAPHIC STAT */
 
-.example-wrapper{
-
-width: 100%;
-align-items:center;
-display: flex;
-flex-direction: column; 
+.example-wrapper {
+  width: 100%;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
 }
 
-.chart1{
+.chart1 {
   width: 50%;
   margin-top: 5%;
-  
 }
-.chart2{
+.chart2 {
   width: 50%;
   margin-top: 5%;
-  
 }
-.chart3{
+.chart3 {
   width: 50%;
   margin-top: 5%;
-  
 }
 
 .operation-table table {
   display: flex;
   flex-direction: column;
   align-items: center;
- 
-  
 }
 
 .operation-table table thead {
@@ -967,3 +951,52 @@ flex-direction: column;
   flex-direction: column;
 }
 
+/* Footer */
+.footer {
+  display: flex;
+  justify-content: space-around;
+  background-color: #2678d1;
+  padding: 20px;
+  text-align: center;
+  color: white;
+}
+#openModal {
+  cursor: pointer;
+}
+.modal {
+  display: none;
+  color: #000;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+.modal-content {
+  background-color: #fff;
+  margin: 15% auto;
+  padding: 20px;
+  border-radius: 5px;
+  width: 60%;
+}
+.listeEquipe {
+list-style-type: none;
+}
+.listeEquipe li {
+  margin-left: 0;
+}
+.close-modal {
+  color: #aaa;
+  float: right;
+  font-size: 24px;
+  font-weight: bold;
+}
+.close-modal:hover,
+.close-modal:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
