--- a/SYMFONY/templates/security/login.html.twig
+++ b/SYMFONY/templates/security/login.html.twig
@@ -37,8 +37,10 @@
 					<br>
 					<div class="flex-containerCo">
 						<div class="remember-meCo">
-							<input type="checkbox" id="rememberMeCo">
-							<label for="rememberMeCo">Se souvenir de moi</label>
+							<div class="checkRemember">
+								<input type="checkbox" id="rememberMeCo">
+								<label for="rememberMeCo">Se souvenir de moi</label>
+							</div>
 						</div>
 						<div style="width: 160px;"></div>
 						<div class="forgot-passwordCo">
