--- a/SYMFONY/templates/pdf/pdf_template.html.twig
+++ b/SYMFONY/templates/pdf/pdf_template.html.twig
@@ -12,9 +12,8 @@
     <h1>Hello ! ✅</h1>
 
     This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code>C:/Users/59013-47-14/Desktop/Projet_fil_rouge/Projet_CleanThis/SYMFONY/src/Controller/PdfController.php</code></li>
-        <li>Your template at <code>C:/Users/59013-47-14/Desktop/Projet_fil_rouge/Projet_CleanThis/SYMFONY/templates/pdf/index.html.twig</code></li>
-    </ul>
+   <table>
+    <tr><th>${{operation.id}}</th><th>{{operation.type}}</th><th></th></tr>
+   </table>
 </div>
 {% endblock %}
