--- a/SYMFONY/templates/employe/operation.html.twig
+++ b/SYMFONY/templates/employe/operation.html.twig
@@ -30,7 +30,7 @@
     <div class="custom-block">
         <div class="date">{{ operation.dateStart|date('d/m/Y') }}</div>
         <div class="status">{{ operation.statut }}</div>
-        <div class="description">{{ operation.description }}</div>
+        <a href="{{ path('generate_pdf') }}" target="_blank">Générer PDF</a>
         <form action="{{ path('app_operation_prendre', {'id': operation.id}) }}" method="post" class="operation-form">
             <button type="submit" class="prendre-button buttonOp">Prendre</button>
         </form>
