--- a/SYMFONY/templates/home/home.html.twig
+++ b/SYMFONY/templates/home/home.html.twig
@@ -1,15 +1,17 @@
   {% include "base/flash.html.twig" %}
 <div class="container" >
   {# Paragraphe intro #}
-  <div class="divIntro">
+    <div class="divIntro" style="background-image: url('{{ asset('image/bg.png') }}');">
+    <h1>Éclat garanti, sans compromis </h1>
     <h2 class="intro">
 		Depuis un demi-siècle, Clean This définit l'excellence en nettoyage. Avec 50 ans d'expérience, notre savoir-faire inégalé garantit un service de qualité supérieure à chaque intervention. Faites confiance à notre héritage pour des résultats impeccables à chaque fois.
 	</h2>
+    <a class="btnDecouvrir" href="#cardList">Découvrez nos offres</a> <!-- Bouton ajouté -->
   </div>
 
   {# Card prestation #}
-  
-  <div class="cardList">
+  <h2 class="presta"> Choissisez Parmis Nos Prestations </h2>
+  <div id="cardList" class="cardList">
     {% for typeOperation in typesOperations %}
       <div class="flipContainer">
         <div class="flipper">
@@ -37,7 +39,8 @@
   </div>
 
   {# btn devis #}
-  <div class="divIntro">
+  
+  <div class="divIntro1">
     <a class="btnDevis" href="{{ path('client')}}">DEMANDER VOTRE DEVIS</a>
   </div>
 </div>
