--- a/SYMFONY/templates/base/nave.html.twig
+++ b/SYMFONY/templates/base/nave.html.twig
@@ -6,6 +6,6 @@
         <li><a href="{{ path('admin.listePersonnel')}}">Liste Personnel</a></li>
         <li><a href="{{ path('app_register')}}">Ajout Personnel</a></li>
         <li><a href="{{ path('app_statistique')}}">Statistique</a></li>
-        <li><a href="#">Répertoire</a></li>
+        <li><a href="{{path('app_repertoire')}}">Répertoire</a></li>
     </ul>
 </nav>
