--- a/SYMFONY/templates/employe/admin/listePersonnel.html.twig
+++ b/SYMFONY/templates/employe/admin/listePersonnel.html.twig
@@ -2,7 +2,7 @@
 {% block title %}Liste du personnel
 {% endblock %}
 {% block body %}
-
+{% include "base/nave.html.twig" %}
 	{% set titre = "Liste du personnel" %}
 	{% include "base/blueBar.html.twig" %}
 
