--- a/SYMFONY/templates/pdf/pdf_template.html.twig
+++ b/SYMFONY/templates/pdf/pdf_template.html.twig
@@ -1,20 +1,10 @@
-{% extends 'base.html.twig' %}
 
-{% block title %}Hello PdfController!{% endblock %}
+
+{% block title %}RAPPORT{% endblock %}
+<div>
+
+</div>
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
 
-<div class="example-wrapper">
-    <h1>Hello ! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code>C:/Users/59013-47-14/Desktop/Projet_fil_rouge/Projet_CleanThis/SYMFONY/src/Controller/PdfController.php</code></li>
-        <li>Your template at <code>C:/Users/59013-47-14/Desktop/Projet_fil_rouge/Projet_CleanThis/SYMFONY/templates/pdf/index.html.twig</code></li>
-    </ul>
-</div>
 {% endblock %}
