--- a/SYMFONY/templates/navbar/index.html.twig
+++ b/SYMFONY/templates/navbar/index.html.twig
@@ -38,7 +38,7 @@
 					</a>
 				{% else %}
 					<a class="nav-link salarie" href="{{ path('app_login') }}">
-				<img src="{{ asset('image/codicon_account.png') }}" alt="Aide">
+				<img class="imgnav-item" src="{{ asset('image/codicon_account.png') }}" alt="Aide">
 						<p>Espace salarié</p>
 					</a>
 				{% endif %}
