--- a/SYMFONY/templates/home/home.html.twig
+++ b/SYMFONY/templates/home/home.html.twig
@@ -1,8 +1,9 @@
 {% include "base/flash.html.twig" %}
 <div class="container">
   {# Section Introduction #}
+
+  <div class="divIntro"style="background-image: url('{{ asset('image/wave.jpg') }}'); background-size: cover; background-position: center; background-repeat: no-repeat;"> >
   
-  <div class="divIntro">
   <div class="message-titre">
     <h1>Éclat garanti, sans compromis</h1>
     <h2 class="intro">
@@ -14,31 +15,9 @@
   <div class="image-home">
     <img class="bg-img" src="{{ asset('image/bg2.png') }}" alt="Image de fond montrant des services de nettoyage">
     </div>
-   
+
 </div>
    
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
@@ -74,4 +53,17 @@
   <div class="divIntro1">
     <a class="btnDevis" href="{{ path('client') }}">DEMANDER VOTRE DEVIS</a>
   </div>
+
+   <h1 class="intro1">
+    Notre Engagement pour la Planète : Construire un Avenir Durable
+    </h1>
+    <p class="eco-texte">Notre engagement pour la planète, en tant que société de nettoyage, repose sur la conviction que chaque geste compte et que nous avons tous un rôle crucial à jouer dans la préservation de notre environnement. Conscients des défis écologiques auxquels nous faisons face, nous nous efforçons de promouvoir des pratiques durables et responsables dans toutes nos prestations. Nous utilisons des produits de nettoyage écologiques, adoptons des méthodes qui minimisent l'impact environnemental et réduisons notre consommation d'eau et d'énergie. En soutenant des initiatives locales de conservation et en sensibilisant nos clients à l'importance de l'écologie, nous mettons tout en œuvre pour contribuer à un avenir plus vert et plus sain. Ensemble, avec détermination et solidarité, nous pouvons bâtir un monde où la propreté et la durabilité vont de pair. </p>
+
+
+<div class="eco-image">
+    <img class="eco-img1" src="{{ asset('image/eco-label-logo-1.jpg') }}" alt="">
+    <img class="eco-img2" src="{{ asset('image/nf-environnement.jpg') }}" alt="">
+    <img class="eco-img3" src="{{ asset('image/logo-ecocert-detergent.jpg') }}" alt="">
+    <img class="eco-img4" src="{{ asset('image/nordic_swan.jpg') }}" alt="">
+  
 </div>
