--- a/SYMFONY/templates/base.html.twig
+++ b/SYMFONY/templates/base.html.twig
@@ -4,6 +4,7 @@
 
 	<head>
 		<meta charset="UTF-8">
+		<meta name="google-signin-client_id" content="{{ google_client_id}}.apps.googleusercontent.com">
 		<title>
 			{% block title %}Welcome!
 			{% endblock %}
