--- a/SYMFONY/templates/security/login.html.twig
+++ b/SYMFONY/templates/security/login.html.twig
@@ -2,14 +2,9 @@
 
 {% block title %}Log in!{% endblock %}
 
-{% block javascripts %}
-	<script src="https://apis.google.com/js/platform.js" async defer></script>
 
-	{% block importmap %}
-		{{ importmap('app') }}
-	{% endblock %}
-{% endblock %}
 {% block body %}
+{% include "base/flash.html.twig" %}
 <form method="post">
    
       
@@ -59,8 +54,8 @@
 					<button type="submit" id="loginButton">Connexion</button>
 				</form>
 				<p class="connect-withCo">Ou connectez-vous avec</p>
-				{# <div>
-					<a href="google-oauth.php" class="gsi-material-button" style="min-width: 200px; max-width: 300px;">
+				<div>
+					<a href="{{ path('connect_google') }}" class="gsi-material-button" style="min-width: 200px; max-width: 300px;">
 						<div class="gsi-material-button-state"></div>
 						<div class="gsi-material-button-content-wrapper" style="display: flex;">
 							<div class="gsi-material-button-icon">
@@ -76,8 +71,8 @@
 							<span style="display: none;">Continue with Google</span>
 						</div>
 					</a>
-				</div> #}
-				<div class="g-signin2" data-onsuccess="onSignIn"></div>
+				</div>
+				{# <div class="g-signin2" data-onsuccess="onSignIn"></div> #}
 			</div>
 		</div>
 </form>
