--- a/SYMFONY/templates/home/home.html.twig
+++ b/SYMFONY/templates/home/home.html.twig
@@ -2,7 +2,7 @@
 <div class="container">
   {# Section Introduction #}
 
-  <div class="divIntro"style="background-image: url('{{ asset('image/wave.jpg') }}'); background-size: cover; background-position: center; background-repeat: no-repeat;"> >
+  <div class="divIntro"style="background-image: url('{{ asset('image/wave.jpg') }}'); background-size: cover; background-position: center; background-repeat: no-repeat;"> 
   
   <div class="message-titre">
     <h1>Éclat garanti, sans compromis</h1>
@@ -17,10 +17,8 @@
     </div>
 
 </div>
+
    
-
-
-
   {# Section Prestation #}
   <h2 class="presta">Choisissez Parmi Nos Prestations</h2>
   <div id="cardList" class="cardList">
