--- a/SYMFONY/templates/client/mail.html.twig
+++ b/SYMFONY/templates/client/mail.html.twig
@@ -14,6 +14,7 @@
         {% endfor %}
         
         {{form_start(form)}}
+            {{form_row(form.mail,{'attr':{'placeholder':"exemple@exemple.com"}})}}
         {{form_end(form)}}
     </div>
 
