--- a/SYMFONY/templates/liste.html.twig
+++ b/SYMFONY/templates/liste.html.twig
@@ -2,22 +2,7 @@
 
 {% block body %}
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-
-<div class="navbarOp"></div>
-
-<nav class="navbarE">
-    <ul class="navE-links">
-        <li><a href="#">Opérations</a></li>
-        <li><a href="#">Ma Liste</a></li>
-        <li><a href="#">Ajout Opération</a></li>
-        <li><a href="#">Liste Personnel</a></li>
-        <li><a href="#">Ajout Personnel</a></li>
-        <li><a href="#">Statistique</a></li>
-        <li><a href="#">Répertoire</a></li>
-    </ul>
-
-</nav>
- 
+{% include "base/nave.html.twig" %} 
 
 {% set titre = "Liste de vos taches en cours" %}
 {% include 'base/blueBar.html.twig' %}
