--- a/SYMFONY/templates/navbar/index.html.twig
+++ b/SYMFONY/templates/navbar/index.html.twig
@@ -14,7 +14,7 @@
 
 			<div class="nav-item">
 				<a class="nav-link" href={{ path("client") }}>
-					<img src="{{ asset('image/image_devis.png') }}" alt="Devis">
+					<img src="{{ asset('image/image_devis.png') }}" alt={% trans %}"Devis"{% endtrans %}>
 					<p>Devis</p>
 				</a>
 			</div>
